remarkably... actually solved the extra column / spacing issue in the nav.  just needs tidying up the formatting now

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -3,9 +3,7 @@
 /* ** MAIN NAVIGATION MENU ** */
 
 .site-nav {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
+  position: relative;
   border: none;
 }
 
@@ -27,26 +25,39 @@
 }
 
 @media screen and (max-width: var(--bp-nav)) {
-  .site-nav .trigger {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    background: #fff;
-    left: auto;
-    right: 0;
-    margin: 0;
-    top: 100%;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    padding: 0.5rem 1rem;
-    border: 3px solid var(--color-grey-500);
-    border-radius: 0.5rem;
-    z-index: 1001;
+  .site-nav {
+    position: relative;
   }
 
-  .site-nav .trigger a {
-    display: block;
-    margin: 0.5rem 0;
+  .site-nav label {
+    display: inline-block;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    z-index: 1002;
   }
+}
+
+.trigger {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: auto;
+  min-width: 200px;
+  max-width: 90vw;
+  height: auto;
+  display: none;
+  flex-direction: column;
+  background: #fff;
+  padding: 1rem;
+  border-left: 3px solid var(--color-grey-500);
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+  z-index: 1001;
+  pointer-events: auto;
+}
+
+.nav-trigger:checked ~ .trigger {
+  display: flex;
 }
 
 .sub-links {
