--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,8 +10,8 @@
 
 // ** HEADER **
 .site-header {
- postion: relative;
- z-index:1000;
+  position: relative;
+  z-index:1000;
 }
 
 .site-header .wrapper {
